tests/errors/semantic/blocking/ex5.py
for i in a:
    pass
